# Dissertation-system-main-v5

./: .gitignore  AGI-시대의-인간학.docx  AGI-시대의-인간학.md  README.md  USER_MANUAL.md  copyright.md  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/agents/: AGENT-STRUCTURE-FIX.md  thesis-phase1-wave1-literature-searcher.md  thesis-phase1-wave1-methodology-scanner.md  thesis-phase1-wave1-seminal-works-analyst.md  thesis-phase1-wave1-trend-analyst.md  thesis-phase1-wave2-empirical-evidence-analyst.md  thesis-phase1-wave2-gap-identifier.md  thesis-phase1-wave2-theoretical-framework-analyst.md  thesis-phase1-wave2-variable-relationship-analyst-rlm.md  thesis-phase1-wave2-variable-relationship-analyst.md  thesis-phase1-wave3-critical-reviewer.md  thesis-phase1-wave3-limitation-analyst.md  thesis-phase1-wave3-methodology-critic.md  thesis-phase1-wave4-conceptual-model-builder.md  thesis-phase1-wave5-plagiarism-checker.md  thesis-phase1-wave5-unified-srcs-evaluator-rlm.md  thesis-phase2-mixed-mixed-methods-designer.md  thesis-phase2-philosophical-analysis-planner.md  thesis-phase2-philosophical-argument-construction-designer.md  thesis-phase2-philosophical-method-designer.md  thesis-phase2-philosophical-source-text-selector.md  thesis-phase2-qualitative-participant-selector.md  thesis-phase2-qualitative-qualitative-data-designer.md  thesis-phase2-quantitative-research-model-developer.md  (+5 more)
prompt/: mode-e-paper-upload-workflow.md  mode-f-proposal-upload-workflow.md
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  (+5 more)
thesis-output/: .current-working-dir.txt
(+202 files in other folders)
